--- a/Calendar.html
+++ b/Calendar.html
@@ -16,13 +16,28 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/tui0fks.css" />
     </head>
 
     <body>
         <header>
-            <!-- place navbar here -->
-        </header>
-        <main></main>
+         <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <img src="imgs/clock.png" alt="">
+                </div>
+  <ul class="nav-links">
+    <li><a href="#index.html">Home</a></li>
+    <li><a href="Calendar.html">Calendar</a></li>
+    <li><a href="Timer.html">Timer</a></li>
+    <li><a href="Reward.html">Rewards</a></li>
+  </ul>
+</nav>
+    </header>
+        <main>
+            
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
