HTML Color update

--- a/Calendar.html
+++ b/Calendar.html
@@ -54,15 +54,15 @@
                             <span>Mathematics</span>
                         </div>
                         <div class="legend-item">
-                            <span class="legend-color" style="background-color: #4ECDC4;"></span>
+                            <span class="legend-color" style="background-color: #f072c6;"></span>
                             <span>Science</span>
                         </div>
                         <div class="legend-item">
-                            <span class="legend-color" style="background-color: #45B7D1;"></span>
+                            <span class="legend-color" style="background-color: #a283f8;"></span>
                             <span>English</span>
                         </div>
                         <div class="legend-item">
-                            <span class="legend-color" style="background-color: #FFA502;"></span>
+                            <span class="legend-color" style="background-color: #f7ce82;"></span>
                             <span>History</span>
                         </div>
                         <div class="legend-item">
