--- a/Calendar.html
+++ b/Calendar.html
@@ -95,8 +95,7 @@
                                         <option value="Science" data-color="#4ECDC4">Science</option>
                                         <option value="English" data-color="#45B7D1">English</option>
                                         <option value="History" data-color="#FFA502">History</option>
-                                        <option value="PE/Sports" data-color="#9B59B6">PE/Sports</option>
-                                        <option value="Art" data-color="#2ECC71">Art</option>
+                                        <option value="Electives" data-color="#2ECC71">Electives</option>
                                     </select>
                                 </div>
                                 <div class="mb-3">
