--- a/Calendar.html
+++ b/Calendar.html
@@ -29,7 +29,7 @@
                     <img src="imgs/clock.png" alt="">
                 </div>
   <ul class="nav-links">
-    <li><a href="#index.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="Calendar.html">Calendar</a></li>
     <li><a href="Timer.html">Timer</a></li>
     <li><a href="Reward.html">Rewards</a></li>
