added title animation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 </nav>
     </header>
         <main>
-            
+    <div class="container1">
+  <div>
+    <h1 class="type">Welcome To FocusFlow</h1>
+  </div>
+</div>
         </main>
         <footer>
             <!-- place footer here -->
