--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
   <div>
     <h1 class="type">Welcome To FocusFlow</h1>
   </div>
+    <div>
+        <p class="lead">FocusFlow helps you plan sessions, track time, and stay on task.</p>
+        <a href="Calendar.html" class="calendar-btn mt-3">Open Calendar</a>
+    </div>
 </div>
         </main>
         <footer>
