--- a/Reward.html
+++ b/Reward.html
@@ -35,9 +35,65 @@
   </ul>
 </nav>
     </header>
-        <main>
-            
-        </main>
+
+            <!-- Gift Modal -->
+<div class="modal fade" id="giftModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <h5 class="modal-title">🎉 Reward Unlocked!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <div class="modal-body text-center">
+        <p>Nice work! You earned a reward 🎁</p>
+        <img src="imgs/gift.png" class="img-fluid" alt="Reward">
+      </div>
+
+    </div>
+  </div>
+</div>
+
+            <main class="container my-5">
+  <div class="row text-center g-4">
+    <!-- Gift 1 -->
+    <div class="col-6 col-md-3">
+      <img src="imgs/gift.png"
+           class="img-fluid gift"
+           data-bs-toggle="modal"
+           data-bs-target="#giftModal"
+           alt="Gift">
+    </div>
+
+    <!-- Gift 2 -->
+    <div class="col-6 col-md-3">
+      <img src="imgs/gift.png"
+           class="img-fluid gift"
+           data-bs-toggle="modal"
+           data-bs-target="#giftModal"
+           alt="Gift">
+    </div>
+
+    <!-- Gift 3 -->
+    <div class="col-6 col-md-3">
+      <img src="imgs/gift.png"
+           class="img-fluid gift"
+           data-bs-toggle="modal"
+           data-bs-target="#giftModal"
+           alt="Gift">
+    </div>
+
+    <!-- Gift 4 -->
+    <div class="col-6 col-md-3">
+      <img src="imgs/gift.png"
+           class="img-fluid gift"
+           data-bs-toggle="modal"
+           data-bs-target="#giftModal"
+           alt="Gift">
+    </div>
+  </div>
+</main>
         <footer>
             <!-- place footer here -->
         </footer>
