add reset button to timer and improve start button logic

--- a/Timer.html
+++ b/Timer.html
@@ -40,11 +40,23 @@
                 <h1 class="timer-title">FocusFlow Timer</h1>
                 <div id="taskName" class="task-name"></div>
 
+                <div class="timer-inputs">
+                    <!-- <label>
+                        Minutes:
+                        <input type="number" id="minutesInput" min="0" value="0" />
+                    </label>
+                    <label>
+                        Seconds:
+                        <input type="number" id="secondsInput" min="0" max="59" value="0" />
+                    </label> -->
+                </div>
+
                 <div id="timeDisplay" class="time-display">00:00</div>
 
                 <div class="timer-controls">
                     <button id="startBtn" class="timer-btn">Start</button>
                     <button id="pauseBtn" class="timer-btn outline">Pause</button>
+                    <button id="resetBtn" class="timer-btn outline">Reset</button>
                 </div>
             </section>
 
