--- a/Reward.html
+++ b/Reward.html
@@ -101,12 +101,12 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Movie Night 🍿</h5>
+        <h5 class="modal-title">Movie Night</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body text-center">
         <p>You earned a cozy movie night reward!</p>
-        <img src="imgs/movie.png" class="img-fluid" alt="Movie Reward">
+        <img src="imgs/movie.avif" class="img-fluid" alt="Movie Reward">
       </div>
     </div>
   </div>
@@ -117,12 +117,12 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Sweet Treat 🍪</h5>
+        <h5 class="modal-title">Sweet Treat</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body text-center">
         <p>Time for a snack break!</p>
-        <img src="imgs/snack.png" class="img-fluid" alt="Snack Reward">
+        <img src="imgs/snacks.jpg" class="img-fluid" alt="Snack Reward">
       </div>
     </div>
   </div>
@@ -133,12 +133,12 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Gaming Time 🎮</h5>
+        <h5 class="modal-title">Music</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body text-center">
-        <p>You unlocked 30 minutes of gaming!</p>
-        <img src="imgs/game.png" class="img-fluid" alt="Game Reward">
+        <p>You unlocked 30 minutes of music!</p>
+        <img src="imgs/music.jpg" class="img-fluid" alt="Music Reward">
       </div>
     </div>
   </div>
@@ -149,12 +149,12 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Relax Break 🧘</h5>
+        <h5 class="modal-title">Relax Break</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body text-center">
         <p>Take a well-deserved break and relax.</p>
-        <img src="imgs/relax.png" class="img-fluid" alt="Relax Reward">
+        <img src="imgs/relax.jpg" class="img-fluid" alt="Relax Reward">
       </div>
     </div>
   </div>
