Refactor code structure for improved readability and maintainability

--- a/Reward.html
+++ b/Reward.html
@@ -36,6 +36,8 @@
 </nav>
     </header>
 
+    <h1 id="congratsMessage" class="congrats-message"> Assignment finished. Focus maintained.</h1>
+
 <div class="modal fade" id="giftModal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -105,7 +107,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body text-center">
-        <p>You earned a cozy movie night reward!</p>
+        <p class="reward-description">You earned a cozy movie night reward!</p>
         <img src="imgs/movie.avif" class="img-fluid" alt="Movie Reward">
       </div>
     </div>
@@ -121,8 +123,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body text-center">
-        <p>Time for a snack break!</p>
-        <img src="imgs/snacks.jpg" class="img-fluid" alt="Snack Reward">
+        <p class="reward-description">Time for a snack break!</p>
+        <img src="imgs/fruitbowls.jpg" class="img-fluid" alt="Snack Reward">
       </div>
     </div>
   </div>
@@ -137,7 +139,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body text-center">
-        <p>You unlocked 30 minutes of music!</p>
+        <p class="reward-description">You unlocked 30 minutes of music!</p>
         <img src="imgs/music.jpg" class="img-fluid" alt="Music Reward">
       </div>
     </div>
@@ -153,7 +155,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body text-center">
-        <p>Take a well-deserved break and relax.</p>
+        <p class="reward-description">Take a well-deserved break and relax.</p>
         <img src="imgs/relax.jpg" class="img-fluid" alt="Relax Reward">
       </div>
     </div>
