--- a/Calendar.html
+++ b/Calendar.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Study Calendar</title>
+        <title>Focus Flow</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
