Reorder stylesheet links for proper loading; add back navigation button to Calendar

--- a/Reward.html
+++ b/Reward.html
@@ -17,7 +17,8 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="Reward.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/tui0fks.css" />
+        <link rel="stylesheet" href="index.css" />
+      <link rel="stylesheet" href="https://use.typekit.net/tui0fks.css" />
     </head>
 
     <body>
@@ -53,8 +54,7 @@
     </div>
   </div>
 </div>
-
-         <main class="container my-5">
+     <main class="container my-5">
   <div class="row text-center g-4">
 
     <!-- Gift 1 -->
@@ -95,6 +95,9 @@
 
   </div>
 </main>
+    <div class="container text-center my-4">
+      <a href="Calendar.html" class="calendar-btn">Back to Calendar</a>
+    </div>
 
 <!-- Modal 1 -->
 <div class="modal fade" id="modal1" tabindex="-1">
