--- a/Reward.html
+++ b/Reward.html
@@ -37,6 +37,8 @@
 </nav>
     </header>
 
+    <h2 id="congratsMessage" class="congrats-message"> Assignment finished. Focus maintained.</h2>
+
 <div class="modal fade" id="giftModal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
