Update styles for gift and congrats message; modify calendar button text for clarity

--- a/Reward.html
+++ b/Reward.html
@@ -17,7 +17,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="Reward.css" />
-        <link rel="stylesheet" href="index.css" />
+       
       <link rel="stylesheet" href="https://use.typekit.net/tui0fks.css" />
     </head>
 
@@ -57,7 +57,7 @@
   </div>
 </div>
      <main class="container my-5">
-  <div class="row text-center g-4">
+  <div class="row text-center g-0">
 
     <!-- Gift 1 -->
     <div class="col-6 col-md-3">
@@ -98,7 +98,7 @@
   </div>
 </main>
     <div class="container text-center my-4">
-      <a href="Calendar.html" class="calendar-btn">Back to Calendar</a>
+      <a href="Calendar.html" class="calendar-btn">Add another task!</a>
     </div>
 
 <!-- Modal 1 -->
